--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "afrizalmy/laraindo",
+    "name": "skylastn/laraindo",
     "description": "Package Laravel 9 sederhana untuk format indonesia terdiri dari Localization, Rupiah format, Date format",
     "type": "library",
     "keywords": [
